
      \item The default for \code{pdf(maxRasters=)} has been increased
	from 64 to 1000.

      \item \code{readBin()} now warns if \code{signed = FALSE} is used
      inappropriately (rather than being silently ignored).

      It enforces the documented limit of \eqn{2^{31}-1}{2^31-1} bytes
      in a single call.

      \item PCRE has been updated to version 8.13, a bug-fix release
      with updated Unicode tables (version 6.0.0).
    }
  }

  \subsection{INSTALLATION}{
    \itemize{
      \item It is possible to build in \file{src/extra/xdr} on more
      platforms.  (Needed since glibc 2.14 hides its RPC implementation.)

      \item \command{configure} will find the Sun TI-RPC implementation
      of xdr (in \file{libtirpc}) provided its header files are in the
      search path: see the \sQuote{R Installation and Administration
	Manual}.
    }
  }

  \subsection{PACKAGE INSTALLATION}{
    \itemize{
      \item Using a broad \code{exportPattern} directive in a
      \file{NAMESPACE} file is no longer allowed to export internal
      objects such as \code{.onLoad} and \code{.__S3MethodsTable__.} .

      These are also excluded from imports, along with \code{.First.lib}.
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
     \item \code{fisher.test()} had a buglet: If arguments were factors
      with unused levels, levels were dropped and you would get an error
      saying that there should be at least two levels, inconsistently
      with pre-tabulated data.  (Reported by Michael Fay).

      \item \code{package.skeleton()} will no longer dump S4 objects
      supplied directly rather than in a code file.  These cannot be
      restored correctly from the dumped version.

      \item Build-time expressions in help files did not have access
      to functions in the package being built (with \command{R CMD build}).

      \item Because \code{quote()} did not mark its result as being in
      use, modification of the result could in some circumstances